[package]
name = "token-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.25.0", default_features = false, features = ["signal", "rt-multi-thread", "macros"] }
reqwest = { version = "0.11.14", default_features = false, features = ["json", "default-tls"] }
tower = "0.4"
serde_json = "1.0.91"
hyper = "0.14"
log = "0.4"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4.1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }