[package]
name = "token-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full", "macros"] }
reqwest = { version = "0.11.14", default_features = false, features = ["json", "default-tls"] }
tower = "0.4"
serde_json = "1.0.91"
hyper = "0.14"
log = "0.4"
env_logger = "0.9"
serde = { version = "1", features = ["derive"] }
uuid = { version = "1.4.1", features = [ "v4", "fast-rng", "macro-diagnostics", "serde"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features = ["http-util"] }
laplace_rs = {version = "0.2.0", git = "https://github.com/samply/laplace-rs.git", branch = "main" }
base64 = { version = "0.21.0", default_features = false }
thiserror = "1.0.38"
http = "0.2"
lettre = "0.11.0"
lettre_email = "0.9"
anyhow = { version = "1.0", default-features = false }
diesel = { version = "2.1.4", features = ["sqlite"] }
openssl = { version = "0.10.59", features = ["vendored"] }
chrono = "0.4"

# Logging
tracing = { version = "0.1.37", default_features = false }
tracing-subscriber = { version = "0.3.11", default_features = false, features = ["env-filter", "fmt"] }

# Global variables
once_cell = "1.18"

# Command Line Interface
clap = { version = "4.0", default_features = false, features = ["std", "env", "derive"] }
rand = { default-features = false, version = "0.8.5" }
