[package]
name = "token-manager"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.6.20"
tokio = { version = "1.33.0", features = ["full", "macros"] }
reqwest = { version = "0.11.14", default_features = false, features = ["json", "default-tls"] }
serde_json = "1.0.91"
serde = { version = "1", features = ["derive"] }
beam-lib = { git = "https://github.com/samply/beam", branch = "develop", features = ["http-util"] }
anyhow = { version = "1.0", default-features = false }
diesel = { version = "2.1.4", features = ["sqlite"] }
chrono = "0.4"
async-sse = "5.1.0"
futures = { version = "0.3" }
tokio-util = { version = "0.7", features=["compat"] }

# Logging
tracing = { version = "0.1.37", default_features = false }
tracing-subscriber = { version = "0.3.11", default_features = false, features = ["env-filter", "fmt"] }

# Global variables
once_cell = "1.18"

# Command Line Interface
clap = { version = "4.0", default_features = false, features = ["std", "env", "derive"] }
